--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.13.2</version>
         </dependency>
+
+        <!-- redis依赖commons-pool 这个依赖一定要添加 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
