--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
+        <module>empty</module>
         <module>authentication</module>
         <module>redis</module>
     </modules>
