--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <!-- 首先修改打包方式 -->
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <name>spring-cloud-demo</name>
+    <description>Demo project for Spring Boot</description>
 
     <modules>
         <module>empty</module>
@@ -19,11 +21,16 @@
         <module>redis</module>
         <module>filter</module>
         <module>hikariDataSource</module>
+        <module>eureka-service-1000</module>
+        <module>eureka-client-2000</module>
     </modules>
 
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring-cloud.version>2021.0.4</spring-cloud.version>
+        <spring-cloud-alibaba-dependencies>2.2.3.RELEASE</spring-cloud-alibaba-dependencies>
+        <spring-boot-dependencies>2.7.0</spring-boot-dependencies>
     </properties>
 
     <!--  因为是总项目 所以用dependencyManagement来管理  因为其他的子项目就不会来管理版本了了 可以直接引用 -->
@@ -33,7 +40,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>2021.0.0</version>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -42,7 +49,7 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.2.3.RELEASE</version>
+                <version>${spring-cloud-alibaba-dependencies}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -51,7 +58,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.7.0</version>
+                <version>${spring-boot-dependencies}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
