--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <module>hikariDataSource</module>
         <module>eureka-service-1000</module>
         <module>eureka-client-2000</module>
+        <module>eureka-client-2001</module>
+        <module>eureka-client-2001-2</module>
     </modules>
 
     <properties>
