--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,10 @@
         <module>filter</module>
         <module>hikariDataSource</module>
         <module>eureka-service-1000</module>
+        <module>eureka-service-1001</module>
         <module>eureka-client-2000</module>
         <module>eureka-client-2001</module>
-        <module>eureka-client-2001-2</module>
+        <module>eureka-client-2002</module>
     </modules>
 
     <properties>
