--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,8 @@
         <module>redis</module>
         <module>filter</module>
         <module>hikariDataSource</module>
-        <module>eureka-service-1000</module>
-        <module>eureka-service-1001</module>
-        <module>eureka-client-2000</module>
-        <module>eureka-client-2001</module>
-        <module>eureka-client-2002</module>
+        <module>eureka</module>
+        <module>txlcn</module>
     </modules>
 
     <properties>
