--- a/seata/pom.xml
+++ b/seata/pom.xml
@@ -20,8 +20,30 @@
         <module>tcc</module>
     </modules>
 
-    <dependencies>
+    <properties>
+        <seata.version>1.5.2</seata.version>
+        <mysql.version>5.1.48</mysql.version>
+    </properties>
 
+    <!--  因为是总项目 所以用dependencyManagement来管理  因为其他的子项目就不会来管理版本了了 可以直接引用 -->
+    <dependencyManagement>
+        <dependencies>
+
+            <!--mysql-->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-all</artifactId>
+            <version>${seata.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
