--- a/txlcn/txlcn-tm/manage-2006/src/main/resources/application.yml
+++ b/txlcn/txlcn-tm/manage-2006/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
 tx-lcn:
   logger:
     enabled: true
+    only-error: false
     driver-class-name: ${spring.datasource.driver-class-name}
     jdbc-url: ${spring.datasource.url}
     username: ${spring.datasource.username}
