--- a/txlcn/txlcn-tc/client_2003/pom.xml
+++ b/txlcn/txlcn-tc/client_2003/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.springcloud.txlcn</groupId>
         <artifactId>tc</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+       <!-- <relativePath/>--> <!-- lookup parent from repository -->
     </parent>
     <artifactId>tc2003</artifactId>
     <version>0.0.1-SNAPSHOT</version>
