--- a/springCloudConfig/pom.xml
+++ b/springCloudConfig/pom.xml
@@ -6,36 +6,29 @@
         <groupId>com.springcloud</groupId>
         <artifactId>springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
-
     </parent>
-    <groupId>com.util</groupId>
-    <artifactId>util</artifactId>
+    <groupId>com.springcloud</groupId>
+    <artifactId>springCloudConfig</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>util</name>
-    <packaging>jar</packaging>
-    <description>util project for Spring Boot</description>
+    <name>springCloudConfig</name>
+    <packaging>pom</packaging>
+    <description>springCloudConfig project for Spring Boot</description>
+
+    <modules>
+        <module>config-service-2014</module>
+        <module>config-client-2015</module>
+    </modules>
 
     <dependencies>
-        <!--<dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>easyexcel</artifactId>
-            <version>2.2.10</version>
-        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 
+        <!--缺少 bootstrap.yml无法被识别-->
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.10</version>
-        </dependency>
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.4.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>4.1.2</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
     </dependencies>
 
