--- a/springCloudConfig/config-client-2015/src/main/resources/application.yml
+++ b/springCloudConfig/config-client-2015/src/main/resources/application.yml
@@ -1,1 +1,11 @@
-
+server:
+  port: 2015
+spring:
+  application:
+    name: config-client-2015
+  profiles:
+    include: config
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://service-1:1000/eureka #注册到中心地址，可配置多个。如：1000，1001两个注册中心（集群的方式）
