--- a/util/pom.xml
+++ b/util/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>poi-ooxml</artifactId>
             <version>4.1.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.48</version>
+        </dependency>
     </dependencies>
 
     <build>
