--- a/springCloudConfig/config-service-2014/src/main/resources/bootstrap-default.yml
+++ b/springCloudConfig/config-service-2014/src/main/resources/bootstrap-default.yml
@@ -4,12 +4,9 @@ spring:
       enabled: true #默认开启，false时，客户端不可读取配置服务中心配置
       server:
         git: #默认使用git
-          uri: https://github.com/itchun/config-test.git
-          basedir: D:/config
-      uri: http://localhost:8888
-#      username: root
-#      password: itchun123
-
+          uri: https://gitee.com/iwangchun/config-test.git
+          basedir: D:/config2
+          default-label: master
 
 # 配置文件名称 config-test.yml
 # config 是 {application}
