--- a/springCloudConfig/pom.xml
+++ b/springCloudConfig/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>config-service-2014</module>
         <module>config-client-2015</module>
+        <module>config-client-2016</module>
     </modules>
 
     <dependencies>
@@ -29,6 +30,16 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+
+        <!--自动刷新配置-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
     </dependencies>
 
