--- a/nacos/pom.xml
+++ b/nacos/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>nacos-client</artifactId>
             <version>2.2.0-BETA</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring‐cloud‐starter‐alibaba‐nacos‐discovery</artifactId>
+            <version>2.2.9.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
