--- a/nacos/discover/pom.xml
+++ b/nacos/discover/pom.xml
@@ -19,7 +19,10 @@
     </modules>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
