--- a/nacos/discover/discover-client-2020/src/main/resources/application.yml
+++ b/nacos/discover/discover-client-2020/src/main/resources/application.yml
@@ -6,4 +6,14 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:2021
+        server-addr: 127.0.0.1:8848
+
+feign:
+  client:
+    config:
+      default: #默认情况下的配置
+        connect-timeout: 1000 #单位毫秒
+        read-timeout: 5000 #单位毫秒
+      open-client-01: #这里对应规则有contextId的对应contextId，无contextId的对应name或者value， 有open-client-01配置的情况下，open-client-01配置会覆盖default配置
+        connect-timeout: 1000 #单位毫秒
+        read-timeout: 10000 #单位毫秒
