--- a/nacos/pom.xml
+++ b/nacos/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>discover</module>
+        <module>config</module>
     </modules>
 
     <dependencies>
@@ -27,6 +28,32 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <!--nacos-discovery-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+
+            <!--使用下面的 spring-cloud-loadbalancer 替代-->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!--使用eureka的时候不必主动引入，最新的版本已经使用了spring-cloud-loadbalancer但是nacos还是用的ribbon,所以这里主动引入替换-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
+        </dependency>
+
+        <!--nacos-config-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
     </dependencies>
 
